// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtifactFullScreen snapshots locks the tree with onRegenerate (shows Refresh button) 1`] = `
<Modal
  accessibilityViewIsModal={true}
  animationType="slide"
  onRequestClose={[MockFunction]}
  presentationStyle="overFullScreen"
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#080808",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#111",
          "borderBottomColor": "#333",
          "borderBottomWidth": 1,
          "paddingBottom": 10,
          "paddingHorizontal": 12,
          "paddingTop": 52,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          accessibilityLabel="fibonacci.py · PYTHON"
          numberOfLines={1}
          style={
            {
              "color": "#fff",
              "flex": 1,
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          fibonacci.py · PYTHON
        </Text>
        <View
          accessibilityLabel="Publish artifact to a public link"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-globe"
          />
        </View>
        <View
          accessibilityLabel="Download artifact"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-download"
          />
        </View>
        <View
          accessibilityLabel="Regenerate artifact"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-refresh-cw"
          />
        </View>
        <View
          accessibilityLabel="Copy content"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-copy"
          />
        </View>
        <View
          accessibilityLabel="Close"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-x"
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 16,
          "paddingBottom": 58,
        }
      }
      horizontal={false}
      showsVerticalScrollIndicator={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            {
              "marginBottom": 6,
            }
          }
        />
        <RCTScrollView
          contentContainerStyle={
            {
              "padding": 12,
            }
          }
          horizontal={true}
          showsHorizontalScrollIndicator={true}
          style={
            {
              "backgroundColor": "#111",
              "borderColor": "#333",
              "borderRadius": 8,
              "borderWidth": 1,
            }
          }
        >
          <View>
            <Text
              selectable={true}
              style={
                {
                  "color": "#fff",
                  "fontFamily": "Menlo",
                  "fontSize": 13,
                  "lineHeight": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                def
              </Text>
               fib(n):
    
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                return
              </Text>
               n 
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                if
              </Text>
               n &lt; 
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                2
              </Text>
               
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                else
              </Text>
               fib(n-
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                1
              </Text>
              ) + fib(n-
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                2
              </Text>
              )
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</Modal>
`;

exports[`ArtifactFullScreen snapshots locks the tree without onRegenerate (no Refresh button) 1`] = `
<Modal
  accessibilityViewIsModal={true}
  animationType="slide"
  onRequestClose={[MockFunction]}
  presentationStyle="overFullScreen"
  statusBarTranslucent={true}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#080808",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#111",
          "borderBottomColor": "#333",
          "borderBottomWidth": 1,
          "paddingBottom": 10,
          "paddingHorizontal": 12,
          "paddingTop": 52,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          accessibilityLabel="fibonacci.py · PYTHON"
          numberOfLines={1}
          style={
            {
              "color": "#fff",
              "flex": 1,
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          fibonacci.py · PYTHON
        </Text>
        <View
          accessibilityLabel="Publish artifact to a public link"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-globe"
          />
        </View>
        <View
          accessibilityLabel="Download artifact"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-download"
          />
        </View>
        <View
          accessibilityLabel="Copy content"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-copy"
          />
        </View>
        <View
          accessibilityLabel="Close"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#242424",
              "borderRadius": 8,
              "padding": 8,
            }
          }
        >
          <View
            color="#aaa"
            size={17}
            testID="icon-x"
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 16,
          "paddingBottom": 58,
        }
      }
      horizontal={false}
      showsVerticalScrollIndicator={true}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            {
              "marginBottom": 6,
            }
          }
        />
        <RCTScrollView
          contentContainerStyle={
            {
              "padding": 12,
            }
          }
          horizontal={true}
          showsHorizontalScrollIndicator={true}
          style={
            {
              "backgroundColor": "#111",
              "borderColor": "#333",
              "borderRadius": 8,
              "borderWidth": 1,
            }
          }
        >
          <View>
            <Text
              selectable={true}
              style={
                {
                  "color": "#fff",
                  "fontFamily": "Menlo",
                  "fontSize": 13,
                  "lineHeight": 20,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                def
              </Text>
               fib(n):
    
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                return
              </Text>
               n 
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                if
              </Text>
               n &lt; 
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                2
              </Text>
               
              <Text
                style={
                  {
                    "color": "#a78bfa",
                  }
                }
              >
                else
              </Text>
               fib(n-
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                1
              </Text>
              ) + fib(n-
              <Text
                style={
                  {
                    "color": "#fbbf24",
                  }
                }
              >
                2
              </Text>
              )
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</Modal>
`;
